<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context="edu.fjut.se1603.lwd34.Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/username0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/textcolor" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputUsername"
            android:inputType="textPersonName" />


    </LinearLayout>

<LinearLayout
    android:id="@+id/login_pwd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="70dp"
    android:layout_marginRight="70dp"
    android:layout_marginTop="50dp"
    android:layout_below="@+id/username0"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="@string/pwd"
        android:textColor="@color/textcolor" />

    <EditText
        android:id="@+id/editPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/inputpwd"
        android:inputType="textPassword" />


</LinearLayout>
   <LinearLayout
       android:id="@+id/choosesex"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="70dp"
       android:layout_marginRight="70dp"
       android:layout_marginTop="50dp"
       android:layout_below="@+id/login_pwd"
       android:orientation="horizontal">

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/id"
           android:textColor="@color/textcolor" />

       <RadioGroup
           android:id="@+id/radioGroup"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <RadioButton
               android:id="@+id/radioStu"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:checked="true"
               android:text="@string/student"
               android:textColor="@color/textcolor" />

           <RadioButton
               android:id="@+id/radioTea"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/teacher"
               android:textColor="@color/textcolor" />

       </RadioGroup>
   </LinearLayout>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choosesex"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/button_color"
        android:text="@string/login"
        android:textColor="@color/textcolor" />
<Button
    android:id="@+id/adminButton"
    android:layout_marginTop="50dp"
    android:layout_below="@id/loginButton"
    android:layout_width="wrap_content"
    android:background="#000000"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="管理员操作"/>


</RelativeLayout>