<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAdmin"
    tools:context=".adminActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeadmin"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="45dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/studentManager"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="91dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacherManager"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="166dp" />
</android.support.constraint.ConstraintLayout>